[gd_scene load_steps=4 format=3 uid="uid://phcahy4s6l7o"]

[ext_resource type="Script" uid="uid://l7cmwn6o6jgs" path="res://Scripts/enemy_projectile.gd" id="1_ff34o"]
[ext_resource type="Texture2D" uid="uid://beh0qqtkkougl" path="res://characters/tilemap-characters.png" id="2_ibebl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibebl"]
size = Vector2(6, 6)

[node name="EnemyProjectile" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ff34o")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_ibebl")
region_enabled = true
region_rect = Rect2(78, 28, 18, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ibebl")

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
